--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+	<meta charset="UTF-8">
+	<title>"The Bolden Design Experience"</title>
+</head>
+
+<body>
+	<h1>Terry Bolden Jr aka Leo's Website</h1>
+	<h2>I'm a Web Developer</h2>
+	<hr />
+	<h3><a href="./assets/images/Movie-Ranking.html">Movie Ranking Project</a></h3>
+	<img src="./public/Leo's Movies.png" height="400" alt="movie ranking project preview" />
+	<h3><a href="./assets/Birthday-invite.html">Birthday Invite Project</a></h3>
+	<img src="./assets/images/birthday.png" height="200" alt="birthday invite project preview" />
+	<hr />
+	<a href="./public/about.html">About Me</a>
+	<a href="./public/contact.html">Contact Me</a>
+</body>
+
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
